Adding basic front end and connecting to Mongodb

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,18 @@
 <h1>{{title}}</h1>
 <p>Welcome to {{title}}</p>
+
+<div id="main-top">
+    <label>Name</label><input type="text" name="name" id="name"/>
+    <label>Race</label><input type="text" name="race" id="race"/>
+    <label>Level</label><input type="text" name="level" id="level"/>
+    <label>Class</label><input type="text" name="class" id="class"/>
+    <label>AC</label><input type="text" name="AC" id="AC"/>
+</div>
+<div id="right">
+    <label>STR</label><input class="attribute" type="text" name="STR" id="STR"/>
+    <label>DEX</label><input class="attribute" type="text" name="DEX" id="DEX"/>
+    <label>CON</label><input class="attribute" type="text" name="CON" id="CON"/>
+    <label>WIS</label><input class="attribute" type="text" name="WIS" id="WIS"/>
+    <label>INT</label><input class="attribute" type="text" name="INT" id="INT"/>
+    <label>CHA</label><input class="attribute" type="text" name="CHA" id="CHA"/>
+</div>
