--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -2,7 +2,25 @@ body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
-
+ul#character-list {
+  list-style-type: none;
+  display: flex;
+  width: 100%;
+  flex-direction: row;
+  justify-content: center;
+  padding: 0 0 0 0;
+}
 a {
   color: #00B7FF;
+}
+li.character-object {
+  display: inline-block;
+  margin:auto;
+}
+a.character-link {
+  display: block;
+  text-align: center;
+}
+h1 {
+  text-align: center;
 }
