--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <html>
-  <head>
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel='stylesheet' href='/css/style.css'/>
+    <script src="/jquery/jquery.js"></script>
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <title>{{title}}</title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-      <script src="/jquery/jquery.js"></script>
-  </head>
-  <body>
-    {{{body}}}
-  </body>
+</head>
+<body>
+<div class="main">
+{{{body}}}
+</div>
+</body>
 </html>
