--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -2,17 +2,13 @@
 <html lang="en">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
     <link rel='stylesheet' href='/css/style.css'/>
     <script src="/jquery/jquery.js"></script>
     <title>{{title}}</title>
 </head>
-<body>
-<div class="main">
+<body class="main">
 {{{body}}}
-</div>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/interact.js/1.2.8/interact.js"></script>
+<script src="/js/interact.js"></script>
 <script src="/js/snap.js"></script>
 </body>
 </html>
