--- a/views/character.hbs
+++ b/views/character.hbs
@@ -1,36 +1,36 @@
 <h1>{{character.objectID}}</h1>
 
 <a href="/">back to character select</a>
-<div class="center container">
+<div id="grid-snap">
 
-    <div class="panel panel-default info-panel">
+    <div class="info-panel panel-default">
         <div class="panel-body">
-            <div class="row">
-                <div class="col-xs-12 col-sm-2">
+            <div class="row info">
+                <div class="col-md-2">
                     <div class="info-label">Class</div>
-                    <input type="text" class="form-control info-content" value={{character.class}}>
+                    <input type="text" class="info-content" value={{character.class}}>
                 </div>
-                <div class="col-xs-12 col-md-2">
+                <div class="col-md-2">
                     <div class="info-label">Race</div>
-                    <input type="text" class="form-control info-content" value={{character.race}}>
+                    <input type="text" class="info-content" value={{character.race}}>
                 </div>
-                <div class="col-xs-12 col-md-2">
+                <div class="col-md-2">
                     <div class="info-label">Level</div>
-                    <input type="text" class="form-control info-content" value={{character.level}}>
+                    <input type="text" class="info-content" value={{character.level}}>
                 </div>
-                <div class="col-xs-12 col-md-2">
+                <div class="col-md-2">
                     <div class="info-label">Armor Class</div>
-                    <input type="text" class="form-control info-content"
+                    <input type="text" class="info-content"
                            value={{character.armorClass}}>
                 </div>
-                <div class="col-xs-12 col-md-2">
+                <div class="col-md-2">
                     <div class="info-label">Spell Save</div>
-                    <input type="text" class="form-control info-content"
+                    <input type="text" class="info-content"
                            value={{character.spellSave}}>
                 </div>
-                <div class="col-xs-12 col-md-2">
+                <div class="col-md-2">
                     <div class="info-label">Initiative</div>
-                    <input type="text" class="form-control info-content"
+                    <input type="text" class="info-content"
                            value={{character.initiative}}>
                 </div>
             </div>
@@ -38,12 +38,12 @@
     </div>
 
 
-    <div class="panel panel-default hp-panel">
+    <div class="panel-default hp-panel">
         <div class="panel-body">
-            <div class="row">
-                <div class="col-xs-12 col-hp-1">
+            <div class="row hp">
+                <div class="col-hp-1">
                     <div class="info-label">Hit Points</div>
-                    <input type="text" class="form-control info-content"
+                    <input type="text" class="info-content"
                            value={{character.hitPoints}}>
                 </div>
             </div>
@@ -51,7 +51,7 @@
     </div>
 
 
-    <div class="panel panel-default st-panel">
+    <div class="panel-default st-panel">
         <div class="panel-body">
             <div class="skill row">
                 <div class="col-tbl-1">
@@ -70,13 +70,13 @@
     </div>
 
 
-    <div class="panel panel-default atr-panel">
+    <div class="panel-default atr-panel">
         <div class="panel-body">
             <div class="attributes row">
                 {{#eachProperty character.attributes}}
                     <div class="col-atr-1">
                         <div class="info-label">{{property}}</div>
-                        <input type="text" class="form-control info-content" value={{value}}>
+                        <input type="text" class="info-content" value={{value}}>
                     </div>
                 {{/eachProperty}}
             </div>
@@ -84,7 +84,7 @@
     </div>
 
 
-    <div class="panel panel-default skills-panel">
+    <div class="panel-default skills-panel">
         <div class="panel-body">
             <div class="skill row">
                 <div class="col-tbl-1">
